base-framework/main/default/objects/ESG_Report__c/ESG_Report__c.object-meta.xml
<CustomObject>
    <label>ESG Report</label>
    <nameField>
        <label>ESG Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ESG Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>