base-framework/main/default/objects/ESG_Report__c/fields/Completed_Sections__c.field-meta.xml
<CustomField>
    <fullName>Completed_Sections__c</fullName>
    <label>Completed Sections</label>
    <summaryFilterItems>
        <field>ESG_Report_Section__c.Section_Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>ESG_Report_Section__c.ESG_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>