base-framework/main/default/objects/ESG_Report__c/fields/Number_of_Sections__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sections__c</fullName>
    <label>Number of Sections</label>
    <summaryForeignKey>ESG_Report_Section__c.ESG_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>