base-framework/main/default/objects/ESG_Report__c/fields/Pct_Complete__c.field-meta.xml
<CustomField>
    <fullName>Pct_Complete__c</fullName>
    <formula>Completed_Sections__c /Number_of_Sections__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>