base-framework/main/default/objects/ESG_Report__c/fields/Report_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Start_Date__c</fullName>
    <label>Report Start Date</label>
    <type>Date</type>
</CustomField>