base-framework/main/default/objects/ESG_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reporting_Date__c</columns>
    <columns>Next_Steps__c</columns>
    <columns>Pct_Complete__c</columns>
    <columns>Status__c</columns>
    <columns>Report_Start_Date__c</columns>
    <columns>Report_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>